sass/style.scss
@import url(http://fonts.googleapis.com/css?family=Quicksand:300,400,700);

$link: red;

//Apercu
$bold: "Apercu-Bold";
$light: "Apercu-Light";
$medium: "Apercu-Medium";
$regular: "Apercu";

$sans-fallback: Helvetica, Arial, sans-serif;

$bg-center: no-repeat center center;
$darken-bg-img-ratio: 0.8;
$darken-bg-img: linear-gradient(rgba(0, 0, 0, $darken-bg-img-ratio), rgba(0, 0, 0, $darken-bg-img-ratio));

* {
	box-sizing: border-box;
}

body {
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	text-rendering: geometricPrecision;
}

a, a:hover, a:active, a:focus, a:visited, a:link {
	text-decoration: none;
}

.land {
	width: 100%;
	height: 100vh;

	.head {
		max-width: 550px;
	  	max-height: 400px;
		text-align: center;
		display: block;
		margin: auto;
	  	position: absolute;
	  	top: 0;
	  	left: 0;
	  	bottom: 0;
	  	right: 0;

		  	p {
				font-family: $regular, $sans-fallback;
		  		line-height: 25px;
		  		font-weight: 400;
		  		margin-left: 30px;
				margin-right: 30px;
				font-size: 17px;
				color: #383838;
		  	}

		  	a {
				text-decoration: none;
				color: $link;
				transition: .3s ease-in-out;
				&:hover {
					color: lighten($link, 30%);
				}
			}

		  	#headshot {
				width: 100%;
				max-width: 200px;
				border-radius: 50%;
			}

			h1 {
				font-family: $bold, $sans-fallback;
				font-weight: 400;
				font-size: 42px;
				margin-bottom: 0px;
			}

			h2 {
				font-family: $light, $sans-fallback;
				font-weight: 400;
				font-size: 30px;
				color: $link;
				margin-top: 10px;
				margin-bottom: 3px;
			}
	}
}

#scroll {
	width: 30px;
	display: block;
	margin: 0 auto;
	margin-top: 60px;
	animation-duration: 8s;
}

section {
	width: 100%;
	height: 90vh;
	overflow: hidden;
	background-size: cover;
	background-color: rgba(0, 0, 0, 0.5);
	
	.container {
		position: relative;
		top: 50%;
		transform: translateY(-50%);
		display: block;
		margin: auto;
		max-width: 600px;
		width: 100%;
	}

	h1 {
		text-align: center;
		font-family: $medium, $sans-fallback;
		font-weight: 400;
		color: #fff;
		font-size: 60px;
		margin-top: 0;
		margin-bottom: 15px;
	}

	h2 {
		margin: 0 30px;
		margin-bottom: 35px;
		text-align: left;
		font-family: $light, $sans-fallback;
		font-weight: 400;
		font-size: 18px;
		color: #fff;
		letter-spacing: 1px;
		line-height: 25px;
	}

	.project {
		text-align: center;
		display: block;
		margin: 0 auto;
		width: 195px;
		height: 60px;
		border-radius: 30px;
		border: 1px solid white;
		background-color: rgba(0, 0, 0, 0);
		font-family: $medium, $sans-fallback;
		font-weight: 400;
		font-size: 16px;
		color: #fff;
		transition: .2s ease-in-out;
		padding-top: 20px;

		img {
			width: 35px;
			margin-right: 10px;
		}

		&:hover {
			background-color: rgba(0, 0, 0, 0.6);
			color: #fff;
			width: 180px;
			height: 55px;
			border-radius: 50px;
			padding-top: 18px; 
			text-decoration: none;
		}

		&:focus {
			outline: 0;
		}
	}
}

#dated {
	background: $darken-bg-img, url('../img/dated.jpg') $bg-center;
}

#about {
	background: $darken-bg-img, url('../img/workflow.jpg') $bg-center;
}

#shapr {
	background: $darken-bg-img, url('../img/shapr.jpg') $bg-center;
}

#geolarm {
	background: $darken-bg-img, url('../img/geolarm.jpg') $bg-center;
}

#spotify {
	background: $darken-bg-img, url('../img/spotify.jpg') $bg-center;
}

#footer {
	height: 30vh;
	width: 100%;
	background-color: black;
	margin: 0;

	h1, h2 {
		text-align: center;
		font-family: $medium, $sans-fallback;
		color: white;
	}

	h1 {
		margin-top: 40px;
		font-size: 30px;
		margin-bottom: 25px;
	}

	h2 {
		font-family: $regular;
		font-size: 17px;
		font-weight: 400;
		margin-top: 5px;
	}

	ul {
	display: block;
	margin: 0 auto;
	text-align: center;
	list-style-type: none;
	padding: 0;

		li {
			display: inline-block;
			list-style-type: none;
			margin: 0 20px;
			margin-bottom: 25px;

			a {
				color: #fff;
				font-family: $light, $sans-fallback;
				font-weight: 400;
				font-size: 20px;
				transition: .2s ease-in-out;

				&:hover {
					color: $link;
					text-decoration: none;
				}
			}
		}
	}
	
	#mail {
	margin-bottom: 20px;
		a {
		color: $link;
		margin-top: 50px;
		transition: .2s ease-in-out;
				
			&:hover {
				color: #fff;
				text-decoration: none;
			}
		}
	}
}

@media screen and (max-width: 768px) {
	.land {
		.head {
			#headshot {
				margin-top: 10px;
				max-width: 150px;
			}

			h1 {
				font-size: 2rem;
			}

			h2 {
				font-size: 1.5rem;
			}

			p {
				font-size: 1.4rem;
			}
		}
	}

	section {
		h1 {
			font-size: 36px;
		}

		h2 {
			font-size: 17px;
		}
	}

	#footer {
		height: 380px;

		h1 {
			font-size: 25px;
		}

		h2 {
			font-size: 15px;
		}
	}
}

